--- a/source/project-budgets.html
+++ b/source/project-budgets.html
@@ -83,7 +83,8 @@
             <span>Уровень:&nbsp;</span>
             <span class="improvement-stage__level">Местный</span>
           </div>
-          <div class="improvement-stage__wrapper">
+          <div
+            class="improvement-stage__wrapper improvement-stage__wrapper--status">
             <span>Статус:</span>
             <span class="improvement-stage__status">Подведение итогов</span>
           </div>
