--- a/source/rating-main.html
+++ b/source/rating-main.html
@@ -107,7 +107,9 @@
                   </svg>
                 </span>
                 <span class="category-list__title">Объекты культуры</span>
-                <span class="category-list__hover-text">Количество проектов
+                <span
+                  class="category-list__hover-text category-list__hover-text--is-done">Количество
+                  проектов
                   исчерпано</span>
                 <div class="category-list__count-wrap">
                   <span class="category-list__count">12</span>
@@ -225,7 +227,9 @@
                   </svg>
                 </span>
                 <span class="category-list__title">Объекты культуры</span>
-                <span class="category-list__hover-text">Количество проектов
+                <span
+                  class="category-list__hover-text category-list__hover-text--is-done">Количество
+                  проектов
                   исчерпано</span>
                 <div class="category-list__count-wrap">
                   <span class="category-list__count">12</span>
