--- a/source/category-lists.html
+++ b/source/category-lists.html
@@ -119,7 +119,9 @@
                   </svg>
                 </span>
                 <span class="category-list__title">Объекты культуры</span>
-                <span class="category-list__hover-text">Количество проектов
+                <span
+                  class="category-list__hover-text category-list__hover-text--is-done">Количество
+                  проектов
                   исчерпано</span>
                 <div class="category-list__count-wrap">
                   <span class="category-list__count">12</span>
@@ -237,7 +239,9 @@
                   </svg>
                 </span>
                 <span class="category-list__title">Объекты культуры</span>
-                <span class="category-list__hover-text">Количество проектов
+                <span
+                  class="category-list__hover-text category-list__hover-text--is-done">Количество
+                  проектов
                   исчерпано</span>
                 <div class="category-list__count-wrap">
                   <span class="category-list__count">12</span>
@@ -321,7 +325,8 @@
           рейтингование)</h2>
         <p>Классу списка добавлен модификатор <b>category-list--vote</b></p>
         <p>Для нулевого значения счетчика есть модификатор
-          <b>category-list__count--zero</b></p>
+          <b>category-list__count--zero</b>
+        </p>
 
         <ul
           class="category-list category-list--vote js_short_list js_short_list-category">
@@ -338,7 +343,8 @@
                     <path
                       d="M4.633 16v-1.309c0-5.105 4.148-9.164 9.367-9.164 5.219 0 9.367 4.059 9.367 9.164v1.31"
                       stroke="" stroke-width="2" stroke-miterlimit="10"
-                      stroke-linecap="square" /></svg>
+                      stroke-linecap="square" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Водоснабжение</span>
                 <div class="category-list__count-wrap">
@@ -488,7 +494,8 @@
                     <path
                       d="M21.246 11.818H10.753L7.605 25.41V27.5h16.789v-2.09l-3.148-13.592zM24.394 4.5v7.318H7.605V4.5M11.803 4.5v2.09M15.998 6.59V4.5M20.195 4.5v2.09M7.605 6.592h16.789"
                       stroke="" stroke-width="2" stroke-miterlimit="10"
-                      stroke-linecap="square" /></svg>
+                      stroke-linecap="square" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Объекты культурного
                   наследия</span>
@@ -511,7 +518,8 @@
                     <path
                       d="M4.633 16v-1.309c0-5.105 4.148-9.164 9.367-9.164 5.219 0 9.367 4.059 9.367 9.164v1.31"
                       stroke="" stroke-width="2" stroke-miterlimit="10"
-                      stroke-linecap="square" /></svg>
+                      stroke-linecap="square" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Водоснабжение</span>
                 <div class="category-list__count-wrap">
@@ -536,7 +544,8 @@
                     <path
                       d="M21.246 11.818H10.753L7.605 25.41V27.5h16.789v-2.09l-3.148-13.592zM24.394 4.5v7.318H7.605V4.5M11.803 4.5v2.09M15.998 6.59V4.5M20.195 4.5v2.09M7.605 6.592h16.789"
                       stroke="" stroke-width="2" stroke-miterlimit="10"
-                      stroke-linecap="square" /></svg>
+                      stroke-linecap="square" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Объекты культуры</span>
                 <div class="category-list__count-wrap">
@@ -559,7 +568,8 @@
                       stroke="" stroke-width="2" stroke-miterlimit="10"
                       stroke-linecap="square" />
                     <path d="M16 10.867c-.285-4.088 1.902-6.608 5.703-6.846"
-                      stroke="" stroke-width="2" stroke-miterlimit="10" /></svg>
+                      stroke="" stroke-width="2" stroke-miterlimit="10" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Детские площадки</span>
                 <div class="category-list__count-wrap">
@@ -582,7 +592,8 @@
                       stroke="" stroke-width="2" stroke-miterlimit="10"
                       stroke-linecap="square" />
                     <path d="M16 10.867c-.285-4.088 1.902-6.608 5.703-6.846"
-                      stroke="" stroke-width="2" stroke-miterlimit="10" /></svg>
+                      stroke="" stroke-width="2" stroke-miterlimit="10" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Детские площадки</span>
                 <div class="category-list__count-wrap">
@@ -605,7 +616,8 @@
                       stroke="" stroke-width="2" stroke-miterlimit="10"
                       stroke-linecap="square" />
                     <path d="M16 10.867c-.285-4.088 1.902-6.608 5.703-6.846"
-                      stroke="" stroke-width="2" stroke-miterlimit="10" /></svg>
+                      stroke="" stroke-width="2" stroke-miterlimit="10" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Детские площадки</span>
                 <div class="category-list__count-wrap">
@@ -629,9 +641,11 @@
           рейтингование)</h2>
         <p>Классу списка добавлен модификатор <b>category-list--vote</b></p>
         <p>Активному выбранному проекту добавлен модификатор
-          <b>category-list__item--is-active</b></p>
+          <b>category-list__item--is-active</b>
+        </p>
         <p>Для нулевого значения счетчика есть модификатор
-          <b>category-list__count--zero</b></p>
+          <b>category-list__count--zero</b>
+        </p>
 
         <ul
           class="category-list category-list--vote js_short_list js_short_list-category">
@@ -648,7 +662,8 @@
                     <path
                       d="M4.633 16v-1.309c0-5.105 4.148-9.164 9.367-9.164 5.219 0 9.367 4.059 9.367 9.164v1.31"
                       stroke="" stroke-width="2" stroke-miterlimit="10"
-                      stroke-linecap="square" /></svg>
+                      stroke-linecap="square" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Водоснабжение</span>
                 <div class="category-list__count-wrap">
@@ -798,7 +813,8 @@
                     <path
                       d="M21.246 11.818H10.753L7.605 25.41V27.5h16.789v-2.09l-3.148-13.592zM24.394 4.5v7.318H7.605V4.5M11.803 4.5v2.09M15.998 6.59V4.5M20.195 4.5v2.09M7.605 6.592h16.789"
                       stroke="" stroke-width="2" stroke-miterlimit="10"
-                      stroke-linecap="square" /></svg>
+                      stroke-linecap="square" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Объекты культурного
                   наследия</span>
@@ -821,7 +837,8 @@
                     <path
                       d="M4.633 16v-1.309c0-5.105 4.148-9.164 9.367-9.164 5.219 0 9.367 4.059 9.367 9.164v1.31"
                       stroke="" stroke-width="2" stroke-miterlimit="10"
-                      stroke-linecap="square" /></svg>
+                      stroke-linecap="square" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Водоснабжение</span>
                 <div class="category-list__count-wrap">
@@ -846,7 +863,8 @@
                     <path
                       d="M21.246 11.818H10.753L7.605 25.41V27.5h16.789v-2.09l-3.148-13.592zM24.394 4.5v7.318H7.605V4.5M11.803 4.5v2.09M15.998 6.59V4.5M20.195 4.5v2.09M7.605 6.592h16.789"
                       stroke="" stroke-width="2" stroke-miterlimit="10"
-                      stroke-linecap="square" /></svg>
+                      stroke-linecap="square" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Объекты культуры</span>
                 <div class="category-list__count-wrap">
@@ -869,7 +887,8 @@
                       stroke="" stroke-width="2" stroke-miterlimit="10"
                       stroke-linecap="square" />
                     <path d="M16 10.867c-.285-4.088 1.902-6.608 5.703-6.846"
-                      stroke="" stroke-width="2" stroke-miterlimit="10" /></svg>
+                      stroke="" stroke-width="2" stroke-miterlimit="10" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Детские площадки</span>
                 <div class="category-list__count-wrap">
@@ -892,7 +911,8 @@
                       stroke="" stroke-width="2" stroke-miterlimit="10"
                       stroke-linecap="square" />
                     <path d="M16 10.867c-.285-4.088 1.902-6.608 5.703-6.846"
-                      stroke="" stroke-width="2" stroke-miterlimit="10" /></svg>
+                      stroke="" stroke-width="2" stroke-miterlimit="10" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Детские площадки</span>
                 <div class="category-list__count-wrap">
@@ -915,7 +935,8 @@
                       stroke="" stroke-width="2" stroke-miterlimit="10"
                       stroke-linecap="square" />
                     <path d="M16 10.867c-.285-4.088 1.902-6.608 5.703-6.846"
-                      stroke="" stroke-width="2" stroke-miterlimit="10" /></svg>
+                      stroke="" stroke-width="2" stroke-miterlimit="10" />
+                  </svg>
                 </span>
                 <span class="category-list__title">Детские площадки</span>
                 <div class="category-list__count-wrap">
