--- a/source/main-page.html
+++ b/source/main-page.html
@@ -817,16 +817,17 @@
               <div class="join-indicator-wrapper">
                 <span
                   class="public-debate__status project-status status-color--blue">Идет
-                  прием мнений</span>
-                <div
-                  class="public-debate__joined public-debate__joined--visible join-indicator"
-                  data-tooltip="Участие принято" data-flow="down">
-                  <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <use xlink:href="img/sprite.svg#icon-lightning"></use>
-                  </svg>
-                  <span class="join-indicator__tooltip">Участие принято</span>
-                </div>
+                  прием мнений
+                  <span
+                    class="public-debate__joined public-debate__joined--visible join-indicator"
+                    data-tooltip="Участие принято" data-flow="down">
+                    <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <use xlink:href="img/sprite.svg#icon-lightning"></use>
+                    </svg>
+                    <span class="join-indicator__tooltip">Участие принято</span>
+                  </span>
+                </span>
               </div>
             </div>
             <a href="#" class="public-debate__link project-link">Государственное
@@ -847,16 +848,17 @@
               <div class="join-indicator-wrapper">
                 <span
                   class="public-debate__status project-status status-color--green">Подготовка
-                  к проведению слушаний</span>
-                <div
-                  class="public-debate__joined public-debate__joined--visible join-indicator"
-                  data-tooltip="Участие принято" data-flow="down">
-                  <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <use xlink:href="img/sprite.svg#icon-lightning"></use>
-                  </svg>
-                  <span class="join-indicator__tooltip">Участие принято</span>
-                </div>
+                  к проведению слушаний
+                  <span
+                    class="public-debate__joined public-debate__joined--visible join-indicator"
+                    data-tooltip="Участие принято" data-flow="down">
+                    <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <use xlink:href="img/sprite.svg#icon-lightning"></use>
+                    </svg>
+                    <span class="join-indicator__tooltip">Участие принято</span>
+                  </span>
+                </span>
               </div>
             </div>
             <a href="#" class="public-debate__link project-link">Реконструкция
@@ -1119,15 +1121,20 @@
                   datetime="2020-11-20">20.11.2020</time>
               </span>
               <span class="rating__status project-status">Подготовка к
-                рейтингованию</span>
-              <div class="join-indicator is-visible"
-                data-tooltip="Участие принято" data-flow="down">
-                <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-lightning"></use>
-                </svg>
-                <span class="join-indicator__tooltip">Участие принято</span>
-              </div>
+                рейтингованию Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Quibusdam quos nulla necessitatibus placeat
+                eos. Perferendis vel, cupiditate dolor vitae deserunt facilis
+                libero eligendi maiores, commodi cum modi beatae labore qui?
+                <span class="join-indicator is-visible"
+                  data-tooltip="Участие принято" data-flow="down">
+                  <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="img/sprite.svg#icon-lightning"></use>
+                  </svg>
+                  <span class="join-indicator__tooltip">Участие принято</span>
+                </span>
+              </span>
+
             </div>
             <a href="#" class="rating__link project-link">Реконструкция моста
               через&nbsp;р. Дон на&nbsp;км&nbsp;11+600 автомобильной дороги
@@ -1167,15 +1174,15 @@
               </span>
               <span
                 class="rating__status project-status status-color--orange">Подводятся
-                итоги</span>
-              <div class="join-indicator is-visible"
-                data-tooltip="Участие принято" data-flow="down">
-                <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-lightning"></use>
-                </svg>
-                <span class="join-indicator__tooltip">Участие принято</span>
-              </div>
+                итоги
+                <span class="join-indicator is-visible"
+                  data-tooltip="Участие принято" data-flow="down">
+                  <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="img/sprite.svg#icon-lightning"></use>
+                  </svg>
+                  <span class="join-indicator__tooltip">Участие принято</span>
+                </span></span>
             </div>
             <a href="#" class="rating__link project-link">Государственное
               дошкольное образовательное учреждение Тульской области
