--- a/source/project-budgets.html
+++ b/source/project-budgets.html
@@ -17,15 +17,13 @@
           На главную
         </a>
         <div class="budgets__info info-banner info-banner_enough-true">
-          <svg width="24" height="24" class="info-icon info-banner__icon"
-            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+          <svg width="24" height="24" class="info-icon info-banner__icon" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 24 24">
             <path fill="currentColor" fill-rule="evenodd"
               d="M.2 12C.2 5.494 5.492.2 12 .2 18.505.2 23.8 5.494 23.8 12c0 6.506-5.294 11.8-11.8 11.8C5.492 23.8.2 18.506.2 12zm2.152 0c0 5.32 4.328 9.647 9.647 9.647 5.32 0 9.647-4.327 9.647-9.647S17.318 2.354 12 2.354 2.352 6.68 2.352 12z"
               clip-rule="evenodd"></path>
-            <rect width="2.5" height="8" x="10.75" y="6" fill="currentColor"
-              rx="1"></rect>
-            <rect width="2.5" height="3" x="10.75" y="15" fill="currentColor"
-              rx="1"></rect>
+            <rect width="2.5" height="8" x="10.75" y="6" fill="currentColor" rx="1"></rect>
+            <rect width="2.5" height="3" x="10.75" y="15" fill="currentColor" rx="1"></rect>
           </svg>
 
           <p class="info-banner__title">
@@ -46,11 +44,9 @@
               Развернуть
             </span>
 
-            <svg class="arrow-down info-banner-button__icon"
-              xmlns="http://www.w3.org/2000/svg" fill="none" width="13"
+            <svg class="arrow-down info-banner-button__icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="13"
               height="8" viewBox="0 0 14 8">
-              <path fill="currentColor" fill-rule="evenodd"
-                d="M11.98 0L7 4.97 2.02 0 .5 1.51 7 8l6.5-6.49L11.98 0z"
+              <path fill="currentColor" fill-rule="evenodd" d="M11.98 0L7 4.97 2.02 0 .5 1.51 7 8l6.5-6.49L11.98 0z"
                 clip-rule="evenodd"></path>
             </svg>
           </button>
@@ -66,8 +62,7 @@
             <p class="status-info__text">Голосование завершено, победители
               указаны в&nbsp;соответствующих категориях</p>
           </div>
-          <a class="status-info__file file-item file-item--small file-item--white"
-            href="#" download="">
+          <a class="status-info__file file-item file-item--small file-item--white" href="#" download="">
             <svg width="24" height="24">
               <use xlink:href="img/sprite.svg#icon-doc-doc"></use>
             </svg>
@@ -83,13 +78,11 @@
             <span>Уровень:&nbsp;</span>
             <span class="improvement-stage__level">Местный</span>
           </div>
-          <div
-            class="improvement-stage__wrapper improvement-stage__wrapper--status">
+          <div class="improvement-stage__wrapper improvement-stage__wrapper--status">
             <span>Статус:</span>
             <span class="improvement-stage__status">Подведение итогов</span>
           </div>
-          <div
-            class="improvement-stage__wrapper improvement-stage__wrapper--line-height">
+          <div class="improvement-stage__wrapper improvement-stage__wrapper--line-height">
             <span>Период голосования:&nbsp;</span>
             <span class="improvement-stage__dates">c&nbsp;<time
                 datetime="2020-08-20">20.08.2020</time>&nbsp;по&nbsp;<time
@@ -106,8 +99,7 @@
             <li class="project__item project__item--library">
               <a href="#" class="project__link">
                 <span class="project__icon">
-                  <svg width="28" height="23" viewBox="0 0 28 23" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                  <svg width="28" height="23" viewBox="0 0 28 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-category-1"></use>
                   </svg>
                 </span>
@@ -118,8 +110,7 @@
             <li class="project__item project__item--park">
               <a href="#" class="project__link">
                 <span class="project__icon">
-                  <svg width="24" height="26" viewBox="0 0 24 26" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                  <svg width="24" height="26" viewBox="0 0 24 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-category-2"></use>
                   </svg>
                 </span>
@@ -130,8 +121,7 @@
             <li class="project__item project__item--home">
               <a href="#" class="project__link">
                 <span class="project__icon">
-                  <svg width="26" height="26" viewBox="0 0 26 26" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                  <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-category-3"></use>
                   </svg>
                 </span>
@@ -142,8 +132,7 @@
             <li class="project__item project__item--water">
               <a href="#" class="project__link">
                 <span class="project__icon">
-                  <svg width="28" height="32" viewBox="0 0 28 32" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                  <svg width="28" height="32" viewBox="0 0 28 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-category-4"></use>
                   </svg>
                 </span>
@@ -154,8 +143,7 @@
             <li class="project__item project__item--child">
               <a href="#" class="project__link">
                 <span class="project__icon">
-                  <svg width="28" height="26" viewBox="0 0 28 26" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                  <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-category-5"></use>
                   </svg>
                 </span>
@@ -166,8 +154,7 @@
             <li class="project__item project__item--education js_hide">
               <a href="#" class="project__link">
                 <span class="project__icon">
-                  <svg width="28" height="26" viewBox="0 0 28 26" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                  <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-category-12"></use>
                   </svg>
                 </span>
@@ -179,8 +166,7 @@
             <li class="project__item project__item--art js_hide">
               <a href="#" class="project__link">
                 <span class="project__icon">
-                  <svg width="26" height="25" viewBox="0 0 26 25" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                  <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-category-13"></use>
                   </svg>
                 </span>
@@ -191,8 +177,7 @@
             <li class="project__item project__item--archeology js_hide">
               <a href="#" class="project__link">
                 <span class="project__icon">
-                  <svg width="26" height="26" viewBox="0 0 26 26" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                  <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-category-14"></use>
                   </svg>
                 </span>
@@ -203,8 +188,7 @@
             <li class="project__item project__item--culture js_hide">
               <a href="#" class="project__link">
                 <span class="project__icon">
-                  <svg width="28" height="26" viewBox="0 0 28 26" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                  <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-category-15"></use>
                   </svg>
                 </span>
@@ -213,8 +197,7 @@
               </a>
             </li>
           </ul>
-          <button class="project__button button button--light-blue js_show_all"
-            type="button">
+          <button class="project__button button button--light-blue js_show_all" type="button">
             <span>ПОКАЗАТЬ ЕЩЁ</span>
           </button>
         </div>
