--- a/source/proposal-6-7.html
+++ b/source/proposal-6-7.html
@@ -17,6 +17,7 @@
           <div class="curator__container">
             <div class="curator__left-side">
               <div class="curator__avatar">
+                <span class="curator__placeholder visually-hidden">ас</span>
                 <img src="img/curator/avatar.jpg" alt="Аватар пользователя">
               </div>
               <div class="curator__details">
