--- a/source/proposal-6-7.html
+++ b/source/proposal-6-7.html
@@ -20,10 +20,10 @@
                 <span class="curator__placeholder visually-hidden">ас</span>
                 <img src="img/curator/avatar.jpg" alt="Аватар пользователя">
               </div>
-              <div class="curator__details">
+              <!-- <div class="curator__details"> -->
                 <span class="curator__name">Андрей Селезнев</span>
                 <span class="curator__position">Руководитель Института Благоустройства Нижегородского министерства поддержки и&nbsp;развития городской инфраструктуры</span>
-              </div>
+              <!-- </div> -->
             </div>
             <ul class="curator__right-side js-collapse-content" data-collapsed="false">
               <li>
