--- a/source/project-form-2.html
+++ b/source/project-form-2.html
@@ -28,16 +28,7 @@
         <h1 class="new-project__title page-title page-title--project">
           Форма добавления проекта
         </h1>
-        <a class="new-project__rules link link--blue link--rules" href="#">
-          <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-            <path fill="currentColor" fill-rule="evenodd"
-              d="M.2 12C.2 5.494 5.492.2 12 .2 18.505.2 23.8 5.494 23.8 12c0 6.506-5.294 11.8-11.8 11.8C5.492 23.8.2 18.506.2 12zm2.152 0c0 5.32 4.328 9.647 9.647 9.647 5.32 0 9.647-4.327 9.647-9.647S17.318 2.354 12 2.354 2.352 6.68 2.352 12z"
-              clip-rule="evenodd" />
-            <rect width="2.5" height="8" x="10.75" y="6" fill="currentColor" rx="1" />
-            <rect width="2.5" height="3" x="10.75" y="15" fill="currentColor" rx="1" />
-          </svg>
-          <span>Правила размещения проектов</span>
-        </a>
+        <include src="source/components/project-rules.html"></include>
         <div class="new-project__comments comments-tab">
           <button type="button" class="js-moderator-comments">
             <span>Предыдущие комментарии модератора</span>
