добавляет кнопку удалить и стили

--- a/source/proposal-2-3.html
+++ b/source/proposal-2-3.html
@@ -128,12 +128,7 @@
                 <input type="hidden" id="user-coords" name="" value="Россия,Ярославль">
               <div id="map"></div>
             </div>
-            <div class="proposal__buttons buttons-wrapper">
-              <button type="button" class="button button--white">Отменить</button>
-              <button type="button" class="buttons-wrapper__submit-btn button button--blue" id="improvement-submit-btn">
-                Отправить на модерацию
-              </button>
-            </div>
+            <include src="source/components/buttons-wrapper.html"></include>
             <div class="confirmation-popup">
               <div class="confirmation-popup__body">
                 <button type="button" class="confirmation-popup__close-btn" aria-label="Отмена"></button>
