добавляет табы на страницы

--- a/source/improvement-fork-1.html
+++ b/source/improvement-fork-1.html
@@ -46,19 +46,17 @@
             также от распределения текста на.
           </p>
         </div>
-      </div>
-      <div class="activity-tabs">
-        <ul class="activity-tabs__list">
-          <li class="activity-tabs__item activity-tabs__item--active">
-            <a href="#" class="activity-tabs__link">Ваши объекты</a>
-          </li>
-          <li class="activity-tabs__item">
-            <a href="#" class="activity-tabs__link">Объекты пользвателей</a>
-          </li>
-        </ul>
-        <div class="container activity-tabs__bottom"></div>
-      </div>
-      <div class="container">
+        <div class="activity-tabs">
+          <ul class="activity-tabs__list">
+            <li class="activity-tabs__item activity-tabs__item--active">
+              <a href="#" class="activity-tabs__link">Ваши объекты</a>
+            </li>
+            <li class="activity-tabs__item">
+              <a href="#" class="activity-tabs__link">Объекты пользвателей</a>
+            </li>
+          </ul>
+          <div class="activity-tabs__bottom"></div>
+        </div>
         <a href="#" target="_blank" class="area-improvement__btn button button--white"><span>Добавить свое
             предложение</span><svg width="33" height="12" viewBox="0 0 33 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
