--- a/source/improvement-moderating.html
+++ b/source/improvement-moderating.html
@@ -43,21 +43,19 @@
             также от распределения текста на.
           </p>
         </div>
-      </div>
-      <div class="activity-tabs">
-        <ul class="activity-tabs__list">
-          <li class="activity-tabs__item activity-tabs__item--active">
-            <a href="#" class="activity-tabs__link">Ваши объекты</a>
-          </li>
-          <li class="activity-tabs__item">
-            <a href="#" class="activity-tabs__link">Объекты пользвателей</a>
-          </li>
-        </ul>
-        <div class="container activity-tabs__bottom"></div>
-      </div>
-      <div class="container">
+        <div class="activity-tabs">
+          <ul class="activity-tabs__list">
+            <li class="activity-tabs__item activity-tabs__item--active">
+              <a href="#" class="activity-tabs__link">Ваши объекты</a>
+            </li>
+            <li class="activity-tabs__item">
+              <a href="#" class="activity-tabs__link">Объекты пользвателей</a>
+            </li>
+          </ul>
+          <div class="activity-tabs__bottom"></div>
+        </div>
         <ul class="area-improvement__proposal proposal-list">
-          <li class="proposal-list__item proposal-list__item--border-top">
+          <li class="proposal-list__item">
             <div class="proposal-list__wrapper">
               <div class="proposal-list__account">
                 <svg width="16" height="16">
