добавляет табы на страницы и стили

--- a/source/index.html
+++ b/source/index.html
@@ -175,6 +175,10 @@
             разводящая 3</a>
         </li>
         <li>
+          <a href="improvement-list-with-tabs.html" target="_blank">Благоустройство
+            разводящая 3 с табами (в макете Благоустройство №8)</a>
+        </li>
+        <li>
           <a href="improvement-fork-4.html" target="_blank">Благоустройство
             разводящая 4</a>
         </li>
@@ -218,6 +222,10 @@
         <li>
           <a href="rating-main-3.html" target="_blank">Рейтингование ---
             разводящая 7 + Активное состояние категории</a>
+        </li>
+        <li>
+          <a href="rating-main-3-with-tabs.html" target="_blank">Рейтингование ---
+            разводящая 7 + табы разделения проектов</a>
         </li>
         <li>
           <a href="project-form.html" target="_blank">Форма добавления
