добавляет фильтр и стили для десктопа

--- a/source/projects.html
+++ b/source/projects.html
@@ -17,8 +17,8 @@
               <h1 class="filter__header-item">Проекты на голосовании&nbsp;</h1>
               <span class="filter__header-item filter__header-item--last">в категории</span>
 
-              <div class="filter__category-select form-select js-form-select">
-                <select name="category-select" id="category-select" title="Открыть фильтр">
+              <div class="filter__category-select form-select">
+                <select class="js-form-select" name="category-select" id="category-select" title="Открыть фильтр">
                   <option value="Библиотеки" title="Библиотеки">Библиотеки</option>
                   <option value="Благоустройство" title="Благоустройство">Благоустройство</option>
                   <option value="Бытовое обслуживание" title="Бытовое обслуживание">Бытовое обслуживание</option>
