исправляет ошибки в пп

--- a/source/public-debates-list.html
+++ b/source/public-debates-list.html
@@ -25,7 +25,7 @@
           выносящимся на обсуждение.
         </p>
         <form class="public-debate__filter categories-filter">
-          <!-- <ul class="categories-filter__level-toggler page-nav">
+          <ul class="categories-filter__level-toggler page-nav">
             <li class="page-nav__item">
               <a href="#" class="page-nav__link page-nav__link--active">Федеральные</a>
             </li>
@@ -35,7 +35,7 @@
             <li class="page-nav__item">
               <a href="#" class="page-nav__link">Местные</a>
             </li>
-          </ul> -->
+          </ul>
           <select name="categories" id="categories" title="Открыть фильтр" data-deselect="true" class="categories-filter__select multiple-select js-multiple-select" data-placeholder-text="Все категории" multiple>
             <option data-placeholder="true"></option>
             <option value="Библиотеки" title="Библиотеки">Библиотеки</option>
