--- a/source/public-debates-list.html
+++ b/source/public-debates-list.html
@@ -25,7 +25,7 @@
           выносящимся на обсуждение.
         </p>
         <form class="public-debate__filter categories-filter">
-          <ul class="categories-filter__level-toggler page-nav">
+          <ul class="page-nav">
             <li class="page-nav__item">
               <a href="#" class="page-nav__link page-nav__link--active">Федеральные</a>
             </li>
@@ -36,7 +36,7 @@
               <a href="#" class="page-nav__link">Местные</a>
             </li>
           </ul>
-          <select name="categories" id="categories" title="Открыть фильтр" data-deselect="true" class="categories-filter__select multiple-select js-multiple-select" data-placeholder-text="Все категории" multiple>
+          <select name="categories" id="categories" title="Открыть фильтр" data-deselect="true" class="multiple-select js-multiple-select" data-placeholder-text="Все категории" multiple>
             <option data-placeholder="true"></option>
             <option value="Библиотеки" title="Библиотеки">Библиотеки</option>
             <option value="Муниципальные образовательные организации" title="Муниципальные образовательные организации">Муниципальные образовательные организации</option>
@@ -60,7 +60,7 @@
             <option value="Фельдшерско-акушерские пункты" title="Фельдшерско-акушерские пункты">Фельдшерско-акушерские пункты</option>
             <option value="Места массового пользования" title="Места массового пользования">Места массового пользования</option>
           </select>
-          <select name="category-select" id="category-select" class="categories-filter__select single-select js-form-select"
+          <select name="category-select" id="category-select" class="single-select js-form-select"
             title="Открыть фильтр" data-placeholder-text="Все статусы"
             data-deselect="true">
             <option data-placeholder="true"></option>
@@ -75,7 +75,7 @@
             <span class="voices-counter__counter-avaliable">1</span>&nbsp;из&nbsp;<span
                 class="voices-counter__counter-total">2</span>
           </div> -->
-          <div class="categories-filter__checkbox form-checkbox">
+          <div class="form-checkbox">
             <input type="checkbox" name="favorites-checkbox"
               id="favorites-checkbox">
             <label for="favorites-checkbox">Только избранные</label>
