--- a/source/project-form.html
+++ b/source/project-form.html
@@ -136,21 +136,7 @@
               </div>
             </div>
           </div>
-          <div class="new-project__button-wrapper">
-            <button type="button" class="button button--white">Отменить</button>
-            <button type="button" class="button-remove">
-              <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M12 1c0-.6-.4-1-1-1H5c-.6 0-1 .4-1 1v2H0v2h1v10c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V5h1V3h-4V1zM6 2h4v1H6V2zm7 3v9H3V5h10z"
-                    fill="currentColor"
-                />
-              </svg>
-              <span>Удалить черновик</span>
-            </button>
-            <button type="button" class="button button--blue new-project__submit-btn" id="improvement-submit-btn">
-              Отправить на модерацию
-            </button>
-          </div>
+          <include src="source/components/buttons-wrapper.html"></include>
           <div class="confirmation-popup">
             <div class="confirmation-popup__body">
               <button type="button" class="confirmation-popup__close-btn" aria-label="Отмена"></button>
