--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -400,6 +400,7 @@
   <include src="source/components/footer.html"></include>
   <include src="source/components/cookie.html"></include>
   <include src="source/components/up-btn.html"></include>
+  <include src="source/components/gallery-popup.html"></include>
 
   <script src="js/libs.js"></script>
   <script src="js/main.min.js"></script>
