добавляет стили для галереи с описанием

--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
         <br />
         <li>
           <a href="composite-poll.html" target="_blank">Составной опрос +
-            Текстовое поле при выборе Другое</a>
+            Текстовое поле при выборе Другое (галерея без описания)</a>
         </li>
         <li>
           <a href="composite-poll-2.html" target="_blank">Составной опрос:
@@ -46,6 +46,9 @@
         <li>
           <a href="composite-poll-result.html" target="_blank">Составной опрос -
             результат</a>
+        </li>
+        <li>
+          <a href="composite-poll-gallery-with-description.html" target="_blank">Составной опрос + галерея с описанием</a>
         </li>
         <br />
         <li>
