--- a/source/index.html
+++ b/source/index.html
@@ -81,6 +81,9 @@
           <a href="discussions.html" target="_blank">Обсуждения</a>
         </li>
         <li>
+          <a href="discussions-with-filter.html" target="_blank">Обсуждения (с добавленным фильтром)</a>
+        </li>
+        <li>
           <a href="poll-list.html" target="_blank">Опросы</a>
         </li>
         <li>
