--- a/source/improvement-fork-1.html
+++ b/source/improvement-fork-1.html
@@ -52,7 +52,7 @@
               <a href="#" class="activity-tabs__link">Ваши объекты</a>
             </li>
             <li class="activity-tabs__item">
-              <a href="#" class="activity-tabs__link">Объекты пользвателей</a>
+              <a href="#" class="activity-tabs__link">Объекты пользователей</a>
             </li>
           </ul>
           <div class="activity-tabs__bottom"></div>
