исправляет работу сингл селекта

--- a/source/filter-preview-2.html
+++ b/source/filter-preview-2.html
@@ -24,7 +24,7 @@
           обсуждений / публичных слушаний и оставить свое мнение по вопросам,
           выносящимся на обсуждение.
         </p>
-        <form class="public-debate__filter categories-filter">
+        <form class="public-debate__filter categories-filter js-form-select">
           <ul class="page-nav">
             <li class="page-nav__item">
               <a href="#" class="page-nav__link page-nav__link--active">Федеральные</a>
@@ -60,7 +60,7 @@
             <option value="Фельдшерско-акушерские пункты" title="Фельдшерско-акушерские пункты">Фельдшерско-акушерские пункты</option>
             <option value="Места массового пользования" title="Места массового пользования">Места массового пользования</option>
           </select>
-          <select name="category-select" id="category-select" class="single-select js-form-select"
+          <select name="category-select" id="category-select" class="single-select"
             title="Открыть фильтр" data-placeholder-text="Все статусы"
             data-deselect="true">
             <option data-placeholder="true"></option>
