--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -84,7 +84,7 @@
       </svg>
     </a>
     <h2>Форма</h2>
-    <form action="#" class="form">
+    <form action="#" class="form js-form-select">
       <div class="form-checkbox">
         <input type="checkbox" name="checkbox" id="checkbox" value="checkbox">
         <label for="checkbox">Я чекбокс</label>
@@ -107,7 +107,7 @@
         <label for="radio-3">Я радиобаттон</label>
       </div>
       <div class="form-select">
-        <select class="js-form-select" name="projects-select" id="projects-select">
+        <select name="projects-select" id="projects-select">
           <option value="Библиотеки" title="Библиотеки">Библиотеки</option>
           <option value="Благоустройство" title="Благоустройство">
             Благоустройство</option>
