--- a/source/discussions-with-filter.html
+++ b/source/discussions-with-filter.html
@@ -16,7 +16,7 @@
     </div>
     <section class="discussion discussion--page">
       <div class="container">
-        <form class="categories-filter">
+        <form class="categories-filter js-form-select">
           <select name="categories" id="categories" title="Открыть фильтр" data-deselect="true" class="multiple-select js-multiple-select" data-placeholder-text="Все категории" multiple>
             <option data-placeholder="true"></option>
             <option value="Библиотеки" title="Библиотеки">Библиотеки</option>
@@ -41,7 +41,7 @@
             <option value="Фельдшерско-акушерские пункты" title="Фельдшерско-акушерские пункты">Фельдшерско-акушерские пункты</option>
             <option value="Места массового пользования" title="Места массового пользования">Места массового пользования</option>
           </select>
-          <select name="category-select" id="category-select" class="single-select js-form-select"
+          <select name="category-select" id="category-select" class="single-select"
             title="Открыть фильтр" data-placeholder-text="Все статусы"
             data-deselect="true">
             <option data-placeholder="true"></option>
