Update for button and foto popup

--- a/source/composite-poll-gallery-with-description.html
+++ b/source/composite-poll-gallery-with-description.html
@@ -70,7 +70,7 @@
               <li class="cards-list__item">
                 <div class="preview-input">
                   <div class="preview-input__image-wrapper">
-                    <img width="263" height="183" src="img/inputs-previews/input-1.jpg" alt="Превью для карточки">
+                    <img width="263" height="183" src="img/inputs-previews/input-1.jpg" data-thumbnail="" alt="Превью для карточки">
                   </div>
                   <input type="radio" name="sample-poll-one" id="input-one" value="one" checked>
                   <label for="input-one">
@@ -87,7 +87,7 @@
               <li class="cards-list__item">
                 <div class="preview-input">
                   <div class="preview-input__image-wrapper">
-                    <img width="263" height="183" src="img/inputs-previews/input-2.jpg" alt="Превью для карточки">
+                    <img width="263" height="183" src="img/inputs-previews/input-2.jpg" data-thumbnail="img/img-project/1.jpg" alt="Превью для карточки">
                   </div>
                   <input type="radio" name="sample-poll-one" id="input-two" value="two">
                   <label for="input-two">
@@ -102,7 +102,7 @@
               <li class="cards-list__item">
                 <div class="preview-input">
                   <div class="preview-input__image-wrapper">
-                    <img width="263" height="183" src="img/inputs-previews/input-3.jpg" alt="Превью для карточки">
+                    <img width="263" height="183" src="img/inputs-previews/input-3.jpg" data-thumbnail="img/img-project/1.jpg" alt="Превью для карточки">
                   </div>
                   <input type="radio" name="sample-poll-one" id="input-three" value="three">
                   <label for="input-three">
@@ -123,7 +123,7 @@
               <li class="cards-list__item">
                 <div class="preview-input">
                   <div class="preview-input__image-wrapper">
-                    <img width="263" height="183" src="img/inputs-previews/input-4.jpg" alt="Превью для карточки">
+                    <img width="263" height="183" src="img/inputs-previews/input-4.jpg" data-thumbnail="img/img-project/1.jpg" alt="Превью для карточки">
                   </div>
                   <input type="radio" name="sample-poll-one" id="input-four" value="four">
                   <label for="input-four">
@@ -140,7 +140,7 @@
               <li class="cards-list__item">
                 <div class="preview-input">
                   <div class="preview-input__image-wrapper">
-                    <img width="263" height="183" src="img/inputs-previews/input-5.jpg" alt="Превью для карточки">
+                    <img width="263" height="183" src="img/inputs-previews/input-5.jpg" data-thumbnail="img/img-project/1.jpg" alt="Превью для карточки">
                   </div>
                   <input type="radio" name="sample-poll-one" id="input-five" value="five">
                   <label for="input-five">
