--- a/source/project-budgets.html
+++ b/source/project-budgets.html
@@ -198,7 +198,8 @@
             </li>
           </ul>
           <button class="project__button button button--light-blue js_show_all" type="button">
-            <span>ПОКАЗАТЬ ЕЩЁ</span>
+            <span class="button-more-text">ПОКАЗАТЬ ЕЩЁ</span>
+            <span class="button-less-text">Скрыть</span>
           </button>
         </div>
       </div>
