--- a/source/rating-main-2.html
+++ b/source/rating-main-2.html
@@ -360,8 +360,9 @@
           </li>
         </ul>
         <button
-          class="category-list__button button button--show-all js_show_all">Показать
-          все
+          class="category-list__button button button--show-all js_show_all">
+          <span class="button-more-text">Показать все</span>
+          <span class="button-less-text">Скрыть</span>
           <svg width="14" height="8">
             <use xlink:href="img/sprite.svg#icon-show-all"></use>
           </svg>
