Big photo in popup

--- a/source/filter-preview-2.html
+++ b/source/filter-preview-2.html
@@ -718,7 +718,7 @@
   <include src="source/components/up-btn.html"></include>
 
   <script src="js/libs.js"></script>
-  <script src="js/main.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
