--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -265,7 +265,7 @@
                 <!-- <span>5</span> -->
                 <span>10</span>
               </div>
-              <!--     if you dont need this field if FromData - add attribute disabled for DIV. See example in nex form__section block   -->
+              <!--     if you dont need this field - add attribute disabled for DIV. See example in nex form__section block   -->
               <div class="js-poll-range" id="poll-range" data-input="poll-range" data-min="1" data-max="10"
                 data-step="1" data-required="true">
               </div>
@@ -285,8 +285,8 @@
                 <!-- <span>5</span> -->
                 <span>10</span>
               </div>
-              <!--     if you dont need this field if FromData - add attribute disabled for DIV         -->
-              <div class="js-poll-range" id="poll-range1" data-input="poll-range" data-min="1" data-max="10"
+              <!--     if you dont need this field - add attribute disabled for DIV         -->
+              <div class="js-poll-range" id="poll-range1" data-input="poll-range1" data-min="1" data-max="10"
                 data-step="1" disabled="true">
               </div>
               <p class="error-field visually-hidden">Пожалуйста заполните поле</p>
