Добавляет блок проектов-победителей и оранжевые плашки

--- a/source/project-budgets.html
+++ b/source/project-budgets.html
@@ -8,8 +8,8 @@
   <include src="source/components/header.html"></include>
 
   <main>
-    <section class="budgets section">
-      <div class="container">
+    <div class="container">
+      <section class="budgets section">      
         <a class="budgets__back-btn back-btn" href="main-page.html">
           <svg width="8" height="14">
             <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
@@ -53,7 +53,7 @@
         </div>
         <h1 class="budgets__title page-title">Распределение бюджетов на проекты
           Московской области в первом квартале 2021 года</h1>
-        <div class="budgets__status status-info">
+        <div class="budgets__status status-info status-info--accent">
           <div class="status-info__text-group">
             <svg width="24" height="24">
               <use xlink:href="img/sprite.svg#icon-tick"></use>
@@ -201,9 +201,9 @@
             <span class="button-more-text">ПОКАЗАТЬ ЕЩЁ</span>
             <span class="button-less-text">Скрыть</span>
           </button>
-        </div>
-      </div>
-    </section>
+        </div>      
+      </section>
+    </div>
   </main>
 
   <include src="source/components/footer.html"></include>
