--- a/source/rating-main-3.html
+++ b/source/rating-main-3.html
@@ -19,7 +19,7 @@
       <h1 class="page-content__title">Государственное дошкольное образовательное
         учреждение Тульской области &laquo;Узловский детский сад&raquo;</h1>
 
-      <div class="status-info status-info--blue">
+      <div class="status-info status-info--accent">
         <div class="status-info__text-group">
           <svg width="12" height="12">
             <use xlink:href="img/sprite.svg#icon-done"></use>
@@ -1130,6 +1130,111 @@
             </svg>
           </a>
         </div>
+      </section>
+
+      <section class="projects-winners">
+        <h2 class="projects-winners__title">Проекты-победители<div class="projects-winners__tooltip info-tooltip" tabindex="0">
+            <span class="info-tooltip__sign">?</span>
+            <div class="projects-winners__tooltip-text info-tooltip__text">
+              Ниже представлен список победителей,<br>определенный первым этапом голосования  
+            </div>
+          </div>
+        </h2>
+
+        
+
+        <ul class="rating-list">
+          <li class="rating-list__item rating-list__item--my-progect">
+            <div class="rating-list__content">
+              <div class="rating-list__my-project">
+                <svg width="16" height="16">
+                  <use xlink:href="img/sprite.svg#icon-user"></use>
+                </svg>
+                <span>Ваш проект</span>
+              </div>
+              <div class="rating-list__link-wrap">
+                <a href="#" class="rating-list__title"><span>Рыбным текстом
+                    называется
+                    текст, служащий для временного наполнения макета в
+                    публикациях</span>
+                </a>
+              </div>
+            </div>
+
+          </li>
+          <li class="rating-list__item rating-list__item--my-progect">
+            <div class="rating-list__content">
+              <div class="rating-list__my-project">
+                <svg width="16" height="16">
+                  <use xlink:href="img/sprite.svg#icon-user"></use>
+                </svg>
+                <span>Ваш проект</span>
+              </div>
+              <div class="rating-list__link-wrap">
+                <a href="#" class="rating-list__title"><span>Рыбным текстом
+                    называется
+                    текст, служащий для временного наполнения макета в
+                    публикациях</span>
+                </a>
+              </div>
+            </div>
+
+          </li>
+          <li class="rating-list__item rating-list__item--my-progect">
+            <div class="rating-list__content">
+              <div class="rating-list__my-project">
+                <svg width="16" height="16">
+                  <use xlink:href="img/sprite.svg#icon-user"></use>
+                </svg>
+                <span>Ваш проект</span>
+              </div>
+              <div class="rating-list__link-wrap">
+                <a href="#" class="rating-list__title"><span>Рыбным текстом
+                    называется
+                    текст, служащий для временного наполнения макета в
+                    публикациях</span>
+                </a>
+              </div>
+            </div>
+
+          </li>
+          <li class="rating-list__item">
+            <div class="rating-list__content">
+              <div class="rating-list__link-wrap">
+                <a href="#" class="rating-list__title"><span>Рыбным текстом
+                    называется
+                    текст, служащий для временного наполнения макета в
+                    публикациях</span>
+                </a>
+              </div>
+            </div>
+
+          </li>
+          <li class="rating-list__item">
+            <div class="rating-list__content">
+              <div class="rating-list__link-wrap">
+                <a href="#" class="rating-list__title"><span>Рыбным текстом
+                    называется
+                    текст, служащий для временного наполнения макета в
+                    публикациях</span>
+                </a>
+              </div>
+            </div>
+
+          </li>
+          <li class="rating-list__item">
+            <div class="rating-list__content">
+              <div class="rating-list__link-wrap">
+                <a href="#" class="rating-list__title"><span>Рыбным текстом
+                    называется
+                    текст, служащий для временного наполнения макета в
+                    публикациях</span>
+                </a>
+              </div>
+            </div>
+
+          </li>
+        </ul>
       </section>
     </div>
   </main>
