Меняет стили вложенного маркированного списка

--- a/source/proposal-internet.html
+++ b/source/proposal-internet.html
@@ -26,14 +26,20 @@
             </div>
           </div>
 
-          <div class="internet-vote__text-container">
+          <div class="bulleted-list internet-vote__text-container">
             <p>
-              Мобильный интернет проведут в&nbsp;выбранный населённый пункт в&nbsp;2022 году, если соблюдены условия:
+              <b>Мобильный интернет проведут в&nbsp;выбранный населённый пункт в&nbsp;2022 году, если соблюдены условия:</b>
             </p>
             <ul>
-              <li>численности жителей: от&nbsp;100 до&nbsp;500 человек; </li>
-              <li>технической возможности подключения: расстояние до&nbsp;точки присоединения &#8213; меньше 70&nbsp;км, без сложных геологических условий прокладки кабеля;</li>
-              <li>выделенной квоты на&nbsp;регион.</li>
+              <li>За&nbsp;подключение проголосовало больше всего жителей по&nbsp;сравнению с&nbsp;другими населёнными пунктами региона</li>
+              <li>Численность жителей — от&nbsp;100 до&nbsp;500 человек</li>
+              <li>Есть техническая возможность подключения:
+                <ul>
+                  <li>расстояние до&nbsp;точки присоединения&nbsp;&mdash; менее 70&nbsp;км</li>
+                  <li>без сложных геологических условий прокладки кабеля</li>
+                </ul>
+              </li>
+              <li>Не&nbsp;превышен лимит квот по&nbsp;количеству подключаемых населенных пунктов от&nbsp;региона</li>
             </ul>
           </div>
 
