--- a/source/proposal-internet.html
+++ b/source/proposal-internet.html
@@ -6,7 +6,7 @@
   <include src="source/components/special-popup.html"></include>
   <include src="source/components/header.html"></include>
   <main>
-    <div class="container container--desktop-only">
+    <div class="container">
       <section class="internet-vote">
         <section class="internet-vote__section">
           <a class="back-btn" href="main-page.html">
