Добавляет таблицу рейтинга населенных пунктов

--- a/source/proposal-internet.html
+++ b/source/proposal-internet.html
@@ -76,6 +76,42 @@
             </div>
           </div>
 
+          <div class="internet-vote__table-wrapper">
+            <div class="internet-vote__table-container">
+              <h3 class="internet-vote__table-title">Рейтинг населенных пунктов вашего региона</h3>
+              <table class="internet-vote__table">
+                <thead>
+                  <tr>
+                    <th>Всего голосов в стране</th>
+                    <th>1 000 000</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Заринский, с. Авдеевская база</td>
+                    <td>640</td>
+                  </tr>
+                  <tr>
+                    <td>Алейский, дер. Малахово</td>
+                    <td>500</td>
+                  </tr>
+                  <tr>
+                    <td>Завьяловский, с. Александровка</td>
+                    <td>400</td>
+                  </tr>
+                  <tr>
+                    <td>Калманский, дер. Александровка</td>
+                    <td>370</td>
+                  </tr>
+                  <tr>
+                    <td>Город славгород городской округ, с. Архангельское</td>
+                    <td>350</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+
           <div class="internet-vote__error">
             <svg class="internet-vote__error-icon" width="24" height="24"
               xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
