Меняет цветовую схему интерактивных элементов страницы голосования за интернет

--- a/source/proposal-internet.html
+++ b/source/proposal-internet.html
@@ -54,7 +54,7 @@
 
           <div class="internet-vote__region-name">Алтайский край</div>
 
-          <input class="internet-vote__search" type="text" placeholder="Введите населённый пункт, за который хотите проголосовать">
+          <input class="text-input internet-vote__search" type="text" placeholder="Введите населённый пункт, за который хотите проголосовать">
 
           <div class="internet-vote__confirmation-request">
             Вы хотите проголосовать за выбранный город?
