Direct-line page + new block on main page

--- a/source/main-page.html
+++ b/source/main-page.html
@@ -659,6 +659,88 @@
         </a>
       </div>
     </section>
+
+    <section class="direct-line-section section">
+      <div class="container">
+        <div class="section__head">
+          <div class="section__title-wrap">
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <use xlink:href="img/sprite.svg#icon-radio"></use>
+            </svg>
+            <h2 class="direct-line-section__title section__title">Прямые линии</h2>
+          </div>
+          <a href="#" class="public-debate__archive-link link-arrow link link--grey">
+            <span>Архив прямых линий</span>
+            <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <use xlink:href="img/sprite.svg#icon-arrow"></use>
+            </svg>
+          </a>
+        </div>
+        <ul class="direct-line-section__projects concurrent-projects">
+          <li class="concurrent-projects__item">
+            <a href="#" class="concurrent-projects__link">
+              <div class="concurrent-projects__status-wrapper">
+                <span class="date">Дата проведения:<time
+                  datetime="2020-12-29">29.12.2020</time></span>
+                <div class="join-indicator-wrapper">
+                  <span class="project-status status-color--red">Идёт прямой эфир</span>
+                </div>
+              </div>
+              <h3 class="concurrent-projects__title">Распределение бюджетов на проекты Московской области в первом квартале 2021 года </h3>
+            </a>
+          </li>
+          <li class="concurrent-projects__item">
+            <a href="#" class="concurrent-projects__link">
+              <div class="concurrent-projects__status-wrapper">
+                <span class="date">Дата проведения:<time
+                  datetime="2020-12-29">29.12.2020</time></span>
+                <div class="join-indicator-wrapper">
+                  <span class="project-status status-color--orange">Подведение итогов</span>
+                </div>
+              </div>
+              <h3 class="concurrent-projects__title">Распределение бюджетов на проекты Московской области в первом квартале 2021 года </h3>
+            </a>
+          </li>
+          <li class="concurrent-projects__item">
+            <a href="#" class="concurrent-projects__link">
+              <div class="concurrent-projects__status-wrapper">
+                <span class="date">Дата проведения:<time
+                  datetime="2020-12-29">29.12.2020</time></span>
+                <div class="join-indicator-wrapper">
+                  <span class="project-status status-color--green">Подведены итоги</span>
+                  <div class="join-indicator" data-tooltip="Участие принято" data-flow="down">
+                    <svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <use xlink:href="img/sprite.svg#icon-lightning"></use>
+                    </svg>
+                    <span class="join-indicator__tooltip">Участие принято</span>
+                  </div>
+                </div>
+              </div>
+              <h3 class="concurrent-projects__title">Распределение бюджетов на проекты Московской области в первом квартале 2021 года </h3>
+            </a>
+          </li>
+          <li class="concurrent-projects__item">
+            <a href="#" class="concurrent-projects__link">
+              <div class="concurrent-projects__status-wrapper">
+                <span class="date">Дата проведения:<time
+                  datetime="2020-12-29">29.12.2020</time></span>
+                <div class="join-indicator-wrapper">
+                  <span class="project-status status-color--blue">Идёт приём вопросов</span>
+                </div>
+              </div>
+              <h3 class="concurrent-projects__title">Распределение бюджетов на проекты Московской области в первом квартале 2021 года </h3>
+            </a>
+          </li>
+        </ul>
+        <a href="#" class="public-debate__button button button--light-blue">
+          <span>Перейти ко всем ПРЯМЫМ линиям</span>
+          <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="img/sprite.svg#icon-arrow"></use>
+          </svg>
+        </a>
+      </div>
+    </section>
+
     <section class="public-debate section">
       <div class="container">
         <div class="public-debate__head">
